# vektor

./: .flake8  LICENSE.md  README.md  pyproject.toml  requirements.txt
docs/: Concept.md  CosineSimilarityInEncoding.md  Encoding.md  Goals.md  Outline.md  SemanticVocabularyConstruction.md  SkipGramModelGuide.md  Summary.md  TokenizationEncodingSummary.md  VektorDevelopmentRoadmap.md  VektorProjectOverview.md  VektorTokenizationGoals.md
docs/base/: NeuralNetwork.md
docs/core/: CoreDataTypes.md  CustomFloatPrecision.md  Vektor.md
docs/layers/: Dense.md
tests/: test_model.py  test_skip_gram_model.py  test_sparse_encoder.py  test_tokenizer.py
tests/base/: test_activation.py  test_layer.py  test_loss_function.py  test_neural_network.py
tests/core/: test_dtype.py  test_vektor.py
tests/encoders/: test_sparse.py  test_tokenizer.py
tests/layers/: test_dense.py
tests/models/: test_skip_gram.py
vektor/: __init__.py  html_to_text.py  skip_gram_model.py  sparse_encoder.py  token.py  tokenizer.py
vektor/activations/: __init__.py  relu.py  sigmoid.py  softmax.py  tanh.py
vektor/base/: __init__.py  activation.py  exceptions.py  layer.py  loss_function.py  neural_network.py
vektor/core/: __init__.py  dimension.py  dtype.py  matrix.py  precision.py  vector.py  vektor.py
vektor/embeddings/: __init__.py  cosine.py
vektor/encoders/: __init__.py  bpe.py  positional.py  sparse.py  tokenizer.py
vektor/layers/: __init__.py  dense.py  sparse.py
vektor/loss/: __init__.py  ce.py  mse.py  rmse.py
vektor/models/: skip_gram.py
